# TaskForce

./: README.md
taskforce_macro/: Cargo.toml  build.rs  icon.rc  taskforce_installer.iss
taskforce_macro/src/: app.rs  main.rs  models.rs
taskforce_macro/src/backend/: hotkeys.rs  mod.rs  player.rs  recorder.rs  storage.rs
